<resources>
    <string name="app_name">MADEJAVA5</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="avengers">Avengers</string>
    <string name="_87">87%</string>
    <string name="_2018">2018</string>

    <string name="image_movie">image movie</string>
    <string name="_26_december_2018">26 December 2018</string>
    <string name="overview">Overview</string>
    <string name="overview_detail">This is the Overview</string>
    <string name="description">Description</string>
    <string name="title">Title :</string>
    <string name="release_date">Release Date :</string>
    <string name="rating">Rating :</string>
    <string name="language">en-Us</string>
    <string name="favorite_menu">Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="fav_removed">Removed from Favorite</string>
    <string name="fav_add">Added to Favorite</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="notification">Notification</string>
    <string name="change_language">Change Language</string>
    <string name="daily_key">daily notification key</string>
    <string name="released_key">released notification key</string>
    <string name="new_movie_release">New Movie Release Today</string>
    <string name="LANGUAGEKEY">language_preference_key</string>
    <string name="widget">widget</string>
    <string name="movie">movie</string>
    <string name="tv_show">tv</string>
    <string name="key_movie_search">Enter the Title</string>
    <string name="empty_text">empty</string>
    <string name="film_widget">FILM WIDGET</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
